# axum-boilerplate

./: .env.docker  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.cli  Dockerfile.dev  Makefile  README.md  ROUTES.http  docker-compose.yml  drill.yml  server.sh  sqlx-data.json
.github/workflows/: CI.yml
.sqlx/: query-33d05bf9983fe254078ecd0d4492dc02eb3c3340de5caf0b474d611495979f48.json  query-3e9ba2028d53254bba86e80aa37bedb8367e65f7162c0c0fe5cf1fa06d89c8c6.json  query-76fe534e5e6b4905ab8cd9a8f9c4335dd970d311f08122400cc0c51235032a6e.json  query-9c9e5c6cf8ab27b95e67309b39c0ea6907264435ee3a8a3196f683ad41dfbb3d.json  query-adc7dc73ecb4d53e1e08d85ed349425cd3f941c7ffb35dce297eaa6fb7ddd5a8.json  query-b33bd0e16d5b6a9fc1f88e8450ebc29a46a707bfd9189dae7cacdbc17f85722d.json  query-b8f74399794cd3329eee0f99300d09b26778e42131d8fd256c4ff820e77d49a4.json  query-cacace735965c8f3ccec05fe24591b80f6b0502fea80fec90362d7993f939bc5.json  query-e51a2769f7bd499c076d2172ff2bd4ef7c7ad4dcd0c5eda635751d5587ba6a44.json  query-f6d46edd94c0b368c64efcf85c149d3f1c1c10865caa2602d1160494c3318bd8.json
assets/: chat.html  chat.js  index.html
assets/doc/: api-v1.html  doc_api_v1.yml  index.html
assets/documentation/: doc_api_v1.yml
assets/js/: chat.js  script.js
docker/alertmanager/: alertmanager.yml
docker/grafana/provisioning/dashboards/: Monitor-1664884665535.json
docker/prometheus/: alert.rules  prometheus.yml
migrations/: 20220404101015_users_table.down.sql  20220404101015_users_table.up.sql  20220905202054_create_password_reset_table.down.sql  20220905202054_create_password_reset_table.up.sql  20221018102626_add_limit_to_users_table.down.sql  20221018102626_add_limit_to_users_table.up.sql
src/: cli.rs  config.rs  database.rs  databases.rs  errors.rs  layers.rs  lib.rs  logger.rs  routes.rs  server.rs  states.rs
src/config/: cli.rs  databases.rs  logger.rs  mod.rs
src/emails/: forgotten_password.rs  mod.rs
src/handlers/: mod.rs  users.rs  web.rs  ws.rs
src/layers/: basic_auth.rs  jwt.rs  logger.rs  mod.rs  prometheus.rs  rate_limiter.rs
src/logger/: formatter_layer.rs  mod.rs  storage_layer.rs
src/middlewares/: jwt.rs  mod.rs
src/models/: auth.rs  mod.rs  user.rs
src/repositories/: mod.rs  user.rs
src/utils/: errors.rs  extractors.rs  mod.rs  query.rs  test_helper.rs  validation.rs
templates/: hello.html
templates/doc/: api_v1.html
templates/email/: forgotten_password.html  forgotten_password.txt
tests/: helper.rs  mod.rs  test_helper.rs
tests/api/: mod.rs  user.rs
tests/api/helpers/: mod.rs  user.rs
tests/web/: mod.rs
