[package]
authors = ["Fabien Bellanger <valentil@gmail.com>"]
description = "Axum boilerplate"
edition = "2021"
name = "axum_boilerplate"
readme = "README.md"
repository = "https://github.com/fabienbellanger/axum-boilerplate"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
name = "axum-boilerplate-bin"
path = "src/bin/main.rs"

[dependencies]

# Axum
axum = { version = "0.6.1", features = ["headers", "ws"] }

# Tower
tower = { version = "0.4.13", features = ["timeout"] }
tower-http = { version = "0.3.5", features = ["cors", "fs", "request-id"] }

# Hyper
hyper = "0.14.23"

# Log
env_logger = "0.10.0"
log = "0.4.17"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.16", features = ["registry", "env-filter", "fmt", "json"] }

# Error
color-eyre = "0.6.2"
eyre = "0.6.8"
thiserror = "1.0.37"

# sqlx
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "chrono", "mysql", "macros", "bigdecimal", "migrate", "offline"] }

# Redis
r2d2 = "0.8.10"
redis = { version = "0.22.1", features = ["r2d2"] }

# Tera
tera = "1.17.1"

# Metrics
metrics = "0.20.1"
metrics-exporter-prometheus = "0.11.0"

async-stream = "0.3.3"
bytes = "1.3.0"
chrono = { version = "0.4.23", features = ["serde"] }
clap = { version = "4.0.29", features = ["derive", "cargo"] }
config = "0.13.3"
derive_more = "0.99.17"
dotenv = "0.15.0"
futures = "0.3.25"
http-auth-basic = "0.3.3"
jsonwebtoken = "8.2.0"
lazy_static = "1.4.0"
lettre = "0.10.1"
mailchecker = "5.0.5"
mime = "0.3.16"
passwords = { version = "3.1.12", features = ["common-password"] }
rand = "0.8.5"
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
sha2 = "0.10.6"
tokio = { version = "1.23.0", features = ["full"] }
uuid = { version = "1.2.2", features = ["serde", "v4"] }
validator = { version = "0.16.0", features = ["derive"] }
