[package]
authors = ["Fabien Bellanger <valentil@gmail.com>"]
description = "Axum boilerplate"
edition = "2021"
name = "axum_boilerplate"
readme = "README.md"
repository = "https://github.com/fabienbellanger/axum-boilerplate"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
name = "axum-boilerplate-bin"
path = "src/bin/main.rs"

[dependencies]

# Axum
axum = {version = "0.6.18", features = ["headers", "ws"]}

# Tower
tower = {version = "0.4.13", features = ["timeout"]}
tower-http = {version = "0.4.1", features = ["cors", "fs", "request-id", "util"]}

# Hyper
hyper = "0.14.27"

# Log
env_logger = "0.10.0"
log = "0.4.19"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = {version = "0.3.17", features = ["registry", "env-filter", "fmt", "json"]}

# Error
color-eyre = "0.6.2"
eyre = "0.6.8"
thiserror = "1.0.40"

# sqlx
sqlx = {version = "0.7.0", features = ["runtime-tokio-native-tls", "chrono", "mysql", "macros", "bigdecimal", "migrate"]}

# Redis
r2d2 = "0.8.10"
redis = {version = "0.23.0", features = ["r2d2"]}

# Tera
tera = "1.19.0"

# Metrics
metrics = "0.21.1"
metrics-exporter-prometheus = "0.12.1"

async-stream = "0.3.5"
bytes = "1.4.0"
chrono = {version = "0.4.26", features = ["clock", "std", "serde"], default-features = false}
clap = {version = "4.3.10", features = ["derive", "cargo"]}
config = "0.13.3"
derive_more = "0.99.17"
dotenvy = "0.15.7"
futures = "0.3.28"
http-auth-basic = "0.3.3"
jsonwebtoken = "8.3.0"
lazy_static = "1.4.0"
lettre = "0.10.4"
mailchecker = "5.0.9"
mime = "0.3.17"
passwords = {version = "3.1.13", features = ["common-password"]}
rand = "0.8.5"
serde = {version = "1.0.166", features = ["derive"]}
serde_json = "1.0.99"
serde_urlencoded = "0.7.1"
sha2 = "0.10.7"
tokio = {version = "1.29.1", features = ["full"]}
uuid = {version = "1.4.0", features = ["serde", "v4"]}
validator = {version = "0.16.1", features = ["derive"]}
