[package]
authors = ["Fabien Bellanger <valentil@gmail.com>"]
description = "Axum boilerplate"
edition = "2021"
name = "axum_boilerplate"
readme = "README.md"
repository = "https://github.com/fabienbellanger/axum-boilerplate"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
name = "axum-boilerplate-bin"
path = "src/bin/main.rs"

[dependencies]

# Axum
axum = { version = "0.7.1", features = ["ws"] }

# Tower
tower = { version = "0.4.13", features = ["timeout"] }
tower-http = { version = "0.5.0", features = ["cors", "fs", "request-id", "util"] }

# Hyper
hyper = "1.0.1"

# Log
env_logger = "0.10.1"
log = "0.4.20"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter", "fmt", "json"] }

# Error
color-eyre = "0.6.2"
eyre = "0.6.9"
thiserror = "1.0.50"

# sqlx
sqlx = { version = "0.7.3", features = ["runtime-tokio-native-tls", "chrono", "mysql", "macros", "bigdecimal", "migrate"] }

# Redis
r2d2 = "0.8.10"
redis = { version = "0.23.3", features = ["r2d2"] }

# Tera
tera = "1.19.1"

# Metrics
metrics = "0.21.1"
metrics-exporter-prometheus = "0.12.1"

async-stream = "0.3.5"
bytes = "1.5.0"
chrono = { version = "0.4.31", features = ["clock", "std", "serde"], default-features = false }
clap = { version = "4.4.8", features = ["derive", "cargo"] }
config = "0.13.4"
derive_more = "0.99.17"
dotenvy = "0.15.7"
futures = "0.3.29"
http-auth-basic = "0.3.3"
jsonwebtoken = "9.1.0"
lazy_static = "1.4.0"
lettre = "0.11.2"
mailchecker = "6.0.1"
mime = "0.3.17"
passwords = { version = "3.1.16", features = ["common-password"] }
rand = "0.8.5"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_urlencoded = "0.7.1"
sha2 = "0.10.8"
tokio = { version = "1.34.0", features = ["full"] }
uuid = { version = "1.6.1", features = ["serde", "v4"] }
validator = { version = "0.16.1", features = ["derive"] }
http-body-util = "0.1.0"
